--- a/style/styles.css
+++ b/style/styles.css
@@ -272,3 +272,68 @@ width: 70%;
     font-weight: bold;
 }
 
+.need-support-container{
+    margin-top:150px;
+    width: 1140px;
+    height: 313px;
+    border: 2px solid red;
+    background-image: url(../assets/handshake.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    
+
+    
+
+
+
+}
+.need-support-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.subin{
+    position: static;
+width: 548px;
+height: 57px;
+
+box-sizing: border-box;
+border: 1px solid rgba(13, 19, 33, 0.15);
+border-radius: 8px;
+
+background: rgb(255, 255, 255);
+
+}
+.sub{
+    width: 120px;
+    height: 58px;
+    box-sizing: border-box;
+border: 1px solid rgba(13, 19, 33, 0.15);
+border-radius: 8px;
+
+background: rgb(255, 255, 255);
+
+}
+
+.need-support-text h1{
+    color: rgb(255, 255, 255);
+font-family: Azeret Mono;
+font-size: 32px;
+font-weight: 700;
+line-height: 36px;
+letter-spacing: 0%;
+text-align: center;
+
+}
+
+.need-support-text p{
+color: rgb(255, 255, 255);
+font-family: Azeret Mono;
+font-size: 16px;
+font-weight: 400;
+line-height: 26px;
+letter-spacing: 0%;
+text-align: center;
+}
