--- a/style/styles.css
+++ b/style/styles.css
@@ -337,3 +337,37 @@ line-height: 26px;
 letter-spacing: 0%;
 text-align: center;
 }
+
+.last-container{
+    margin-top: 3150px;
+    width: 1440px;
+    height: 100px;
+    border: 2px solid red;
+    display: flex;
+    justify-content: space-between;
+    border-radius: 16px;
+background: rgba(13, 19, 33, 0.03);
+
+
+
+    
+}
+.last-part-icon{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    margin-right: 10%;
+   
+}
+.last-part-text{
+    color: rgb(13, 19, 33);
+font-family: Azeret Mono;
+font-size: 20px;
+font-weight: 600;
+line-height: 23px;
+letter-spacing: 0%;
+text-align: center;
+margin-left: 10%;
+}
