--- a/style/styles.css
+++ b/style/styles.css
@@ -36,7 +36,7 @@ text-align: center;
 
 .btn{
     
-position: static;
+/* position: static; */
 width: 208px;
 height: 66px;
 border-radius: 8px;
@@ -44,13 +44,15 @@ background: rgb(13, 19, 33);
 color:white;
 margin-top: 35px;
 
+
+
 }
 
 /* main */
 
 .development-container{
     
-border: 2px solid red;
+/* border: 2px solid red; */
 position: absolute;
 width: 1140px;
 /* height: 1393px; */
@@ -193,7 +195,7 @@ text-align: left;
     width: 1140px;
     height: 614px;
 
-border: 2px solid blue;
+/* border: 2px solid blue; */
 }
 
 .inspiration-text{
@@ -226,7 +228,7 @@ align-items: center;
     margin-top: 151px;
     width: 1140px;
     height: 460px;
-    border: 2px solid red;
+    /* border: 2px solid red; */
 
 }
 .my-targer-text{
@@ -276,7 +278,7 @@ width: 70%;
     margin-top:150px;
     width: 1140px;
     height: 313px;
-    border: 2px solid red;
+    /* border: 2px solid red; */
     background-image: url(../assets/handshake.jpg);
     background-repeat: no-repeat;
     background-position: center;
@@ -342,7 +344,7 @@ text-align: center;
     margin-top: 3150px;
     width: 1440px;
     height: 100px;
-    border: 2px solid red;
+    /* border: 2px solid red; */
     display: flex;
     justify-content: space-between;
     border-radius: 16px;
@@ -371,3 +373,5 @@ letter-spacing: 0%;
 text-align: center;
 margin-left: 10%;
 }
+
+
